# bag_ops

./: CMakeLists.txt  README.md  package.xml  setup.py
scripts/: bag_bytes.py  crop_bag.py  interpolate_topic.py  merge_bags.py  pose_to_bag.py  rewrite_stamps.py  shift_topic.py  split_bag.sh  sync_bag.py
src/: bag_player.cpp
